--- a/config/project.yaml
+++ b/config/project.yaml
@@ -1,4 +1,4 @@
-dateModified: 1552380677
+dateModified: 1552664941
 email:
   fromEmail: mrn@mamacph.dk
   fromName: 'Craft test'
@@ -271,14 +271,14 @@ siteGroups:
     name: 'Craft test'
 sites:
   16e863b7-d327-40e4-bf32-c2e9f6965a86:
-    baseUrl: $DEFAULT_SITE_URL
-    handle: default
-    hasUrls: true
-    language: da
-    name: 'Craft test'
-    primary: true
     siteGroup: 927d84e1-054c-4029-9418-6bcb17c367a2
-    sortOrder: 1
+    name: 'Craft test'
+    handle: default
+    language: da
+    hasUrls: true
+    baseUrl: $DEFAULT_SITE_URL
+    sortOrder: '1'
+    primary: '1'
 system:
   edition: solo
   live: true
