--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,43 @@
-node_modules
-.env
-.idea
-vendor
-.DS_Store
-storage
-storage/*
-storage/logs/web.log
-storage/logs/web.log
 composer.phar
-web/cpresources
+
+# CRAFT ENVIRONMENT
+.env.php
+.env.sh
+.env
+
+# COMPOSER
+/vendor
+
+# CRAFT STORAGE
+/storage/*
+/storage/logs/*
+!/storage/.gitkeep
+
+# ASSETS
+/web/assets/*
+
+# BUILD FILES
+/bower_components/*
+/node_modules/*
+/build/*
+/yarn-error.log
+/npm-debug.log
+
+# MISC FILES
+.cache
+.DS_Store
+.idea
+.project
+.settings
+*.esproj
+*.sublime-workspace
+*.sublime-project
+*.tmproj
+*.tmproject
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+config.codekit3
+prepros-6.config
