--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
   "require": {
-    "craftcms/cms": "^3.0.0",
+    "craftcms/ckeditor": "1.0.0-beta.2",
+    "craftcms/cms": "3.1.19",
+    "craftcms/redactor": "2.3.2",
     "vlucas/phpdotenv": "^2.4.0"
   },
   "autoload": {
